--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta property="og:title" content="日本さくら名所１００選マップ" />
 	<meta property="og:type" content="website" />
 	<meta property="og:image" content="./images/ogp.png" />
-	<meta name="description" content="日本の桜名所100選をマップにしました。桜を巡る旅に出かけましょう。美しい桜の花が咲き誇る場所を巡り、日本の春を満喫しましょう。桜の美しさと日本の文化に触れる絶好の機会です。" />
+	<meta name="description" content="日本のさくら名所100選をマップにしました。桜を巡る旅に出かけましょう。美しい桜の花が咲き誇る場所を巡り、日本の春を満喫しましょう。桜の美しさと日本の文化に触れる絶好の機会です。" />
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="日本さくら名所１００選マップ" />
 	<meta name="twitter:image" content="./ogp.png" />
@@ -28,9 +28,9 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js" integrity="sha512-uKQ39gEGiyUJl4AI6L+ekBdGKpGw4xJ55+xyJG7YFlJokPNYegn9KwQ3P8A7aFQAUtUsAQHep+d/lrGqrbPIDQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
+	<script src="https://cdn.tailwindcss.com"></script>
+
 	<script src="./cherry.geojson"></script>
-
-
 
 	<style>
 
@@ -39,11 +39,117 @@
 			height: 100%;
 			padding: 0;
 			margin: 0;
+			z-index: 0;
+		}
+
+		#app{
+			cursor: pointer;
+			z-index: 1;
+		}
+
+		h1{
+			position: relative;
+		}
+
+		h1:after{
+			content: "";
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			width: 100%;
+			height: 7px;
+			background: -webkit-repeating-linear-gradient(-45deg, #6ad1c8, #6ad1c8 2px, #fff 2px, #fff 4px);
+			background: repeating-linear-gradient(-45deg, #6ad1c8, #6ad1c8 2px, #fff 2px, #fff 4px);
 		}
 
 		.awesome-marker {
 			font-size: 15px;
 			padding-top: 5px;
+		}
+
+		@keyframes fadeIn {
+			0% {
+				opacity: 0;
+			}
+
+			100% {
+				opacity: 1;
+			}
+		}
+
+		.modal {
+			display: none;
+			height: 100vh;
+			position: fixed;
+			top: 0;
+			width: 100%;
+			z-index: 20;
+			animation-name: fadeIn;
+			animation-duration: 2s;
+		}
+
+		.modal_bg {
+			background: rgba(0, 0, 0, 0.8);
+			height: 100vh;
+			position: absolute;
+			width: 100%;
+		}
+
+		.modal_content {
+			left: 50%;
+			position: absolute;
+			top: 50%;
+			transform: translate(-50%, -50%);
+			width: 85%;
+			max-width: 600px;
+			background: #ffffff;
+			padding: 10px;
+			height: 450px;
+
+		}
+
+		.closed {
+			position: absolute;
+			right: 0px;
+			top: -40px;
+			border-radius: 50%;
+			width: 30px;
+			height: 30px;
+			z-index: 30;
+			display: block;
+			text-align: center;
+			font-size: 20px;
+			color: #ffffff;
+			line-height: 25px;
+			cursor: pointer;
+			border: 1px solid #ffffff;
+			background: rgba(255, 255, 255, .25);
+		}
+
+		.closed:hover{
+			background: rgba(255, 255, 255, .65);
+		}
+
+		.closed a {
+			text-decoration: none;
+			border: none;
+		}
+
+		.js-modal-close{
+			color: #ffffff;
+		}
+
+		.kaisetu{
+			width: 100%;
+			height: 100%;
+			padding: 0;
+			margin: 0;
+			overflow-y: scroll;
+		}
+
+		.kaisetu a{
+		     color: #16a085 !important;
+		     border-bottom: 1px dotted #16a085;;
 		}
 
 	</style>
@@ -57,14 +163,17 @@
 			const map = L.map('map', {
 				center: [38.385, 136.000],
 				minZoom: 4,
-				zoom: 6
+				zoom: 6,
+				zoomControl: false
 			});
 
 			const hash = new L.Hash(map);
 
+			L.control.zoom( { position: 'topright' } ).addTo( map );
+
 			const tiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
 				maxZoom: 19,
-				attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+				attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> | <a href="https://hitoshi2s.netlify.app/" target="_blank">仁志</a>'
 			}).addTo(map);
 
 			/* geoJson */
@@ -93,13 +202,67 @@
 			layer.bindPopup(popup);
 		}	
 
+		window.display2 = () =>{
+
+			display();
+
+		}
+
+		let display = () =>{
+
+			document.querySelector(".js-modal").style.display ="block";
+
+		}
+
+		window.closed2 = () =>{
+
+			closed();
+		}
+
+
+		let closed = () =>{
+
+			document.querySelector(".js-modal").style.display ="none";
+
+		}
+
 
 	</script>
 
 
 </head>
 <body>
+
 	<div id='map'></div>
+
+	<div id="app" class="fixed top-0 mt-2 ml-2 p-2 bg-white rounded-md left-0 border-solid border-2 border-indigo-600" onclick="display2();">このマップについて</div>
+
+	<div class="modal js-modal">
+		<div class="modal_bg" onClick="closed2();"></div>
+
+		　　<div class="modal_content"><span class="closed" onClick="closed2();">×</span>
+
+			<div class="kaisetu">
+			<h1 class="text-3xl pb-1 mb-5">日本のさくら名所100選</h1>
+
+			<img src="./cherry.jpg" width="100%" alt="">
+			<p class="text-neutral-400">姫路城 © 姫路市 <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC BY 4.0国際</a></p>
+
+			<p class="my-5">日本のさくら名所100選をマップにしました。桜を巡る旅に出かけましょう。</p>
+			<p class="my-5">桜の美しさと日本の文化に触れる絶好の機会です。</p>
+			<p class="my-5">美しい桜の花が咲き誇る場所を巡り、日本の春を満喫しましょう。</p>
+
+			<h1 class="text-3xl pb-1 mb-5">使用したオープンデータ</h1>
+			<a href="https://linkdata.org/work/rdf1s544i" target="_blank">日本さくら名所１００選</a>
+
+			<h1 class="text-3xl pb-1 my-5">ライセンス</h1>
+			<a href="https://creativecommons.org/licenses/by/4.0/deed.ja" target="_blank">CC BY 4.0国際</a>です。ご自由にご利用ください！
+
+			</div>
+
+		　　</div>
+	</div>
+
 
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-MPP84V2NHB"></script>
