--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta property="og:title" content="日本さくら名所１００選マップ" />
 	<meta property="og:type" content="website" />
-	<meta property="og:image" content="./images/ogp.jpg" />
+	<meta property="og:image" content="https://cherry100map.netlify.app/ogp.jpg" />
 	<meta name="description" content="日本のさくら名所100選をマップにしました。桜を巡る旅に出かけましょう。美しい桜の花が咲き誇る場所を巡り、日本の春を満喫しましょう。桜の美しさと日本の文化に触れる絶好の機会です。" />
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="日本さくら名所１００選マップ" />
-	<meta name="twitter:image" content="./ogp.jpg" />
+	<meta name="twitter:image" content="https://cherry100map.netlify.app/ogp.jpg" />
 	<meta name="author" content="仁志">
 	<meta name="keywords" content="日本,観光,さくら,桜,さくら名所,桜名所"/>
 	<link rel="apple-touch-icon" href="./apple-touch-icon.png">
